# tasky-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  tasky.txt
.github/workflows/: publish.yaml
src/: commands.rs  lib.rs  main.rs  storage.rs  task.rs
tests/: add.rs  basic.rs  done.rs  edit.rs  list.rs  remove.rs  test_task.rs
