[package]
name = "tasky-cli"
version = "0.3.1"
edition = "2024"
authors = ["MrGranday"]
description = "A simple Rust CLI to manage to-do lists"
repository = "https://github.com/MrGranday/tasky"
license = "MIT"
keywords = ["cli", "todo", "rust", "beginner-friendly"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }  # CLI argument parsing
serde = { version = "1.0", features = ["derive"] } # JSON serialization
serde_json = "1.0"                                 # JSON handling
colored = "2.0"
chrono = "0.4.41"